fixed layout bug

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ div {
 	padding-top: 5px;
 	border: solid #aaa 1px;
 	background: #222;
-	height: 157px;
+	height: 156px;
 	font-size 14px !important;
 }
 .Up {
